--- a/wiki/Techniques_Tools_Needed_For_This_Project.wiki
+++ b/wiki/Techniques_Tools_Needed_For_This_Project.wiki
@@ -1,4 +1,4 @@
-This Page Mainly Talks About The Techniques & Tools Required For This Project.
+#This Page Mainly Talks About The Techniques & Tools Required For This Project.
 
 = Introduction =
 
