--- a/wiki/Techniques_Tools_Needed_For_This_Project.wiki
+++ b/wiki/Techniques_Tools_Needed_For_This_Project.wiki
@@ -16,7 +16,7 @@ In the meantime, some downloadable items are opensource projects. Those items ca
     # *SDK_02-Qt_4.6.2_bin*
 
 *TOOLs:*
-    # *TOOL_01-Tortoise_SVN_1_6_12_&_SVN_1_6_15*,
+    # *TOOL_01-Tortoise_SVN_1_6_12_'&'_SVN_1_6_15*,
     # *TOOL_02-Qt_Visual_Studio_Integration_1_4_3*,
     # *TOOL_03-Visual_Assist_X_1_7_1_1*,
     # *TOOL_04-Dependency_Walker_2_2*
