Edited wiki page Techniques_Tools_Needed_For_This_Project through web user interface.

--- a/wiki/Techniques_Tools_Needed_For_This_Project.wiki
+++ b/wiki/Techniques_Tools_Needed_For_This_Project.wiki
@@ -16,26 +16,27 @@ http://code.google.com/p/academic-crawler/downloads/list.
 
 == SDKs ==
 
-=== 1. SDK_01-Qt_4.6.2_src ===
+=== '1. SDK_01-Qt_4.6.2_src' ===
 
 
 
-=== 2. SDK_02-Qt_4.6.2_bin ===
+=== '2. SDK_02-Qt_4.6.2_bin' ===
 
 
 
 == TOOLs: ==
 
-=== 1. TOOL_01-Tortoise_SVN_1_6_12_&_SVN_1_6_15 ===
+=== '1. TOOL_01-Tortoise_SVN_1_6_12_&_SVN_1_6_15' ===
 
 
 
-=== 2. TOOL_02-Qt_Visual_Studio_Integration_1_4_3 ===
+=== '2. TOOL_02-Qt_Visual_Studio_Integration_1_4_3' ===
 
 
 
-=== 3. TOOL_03-Visual_Assist_X_1_7_1_1 ===
+=== '3. TOOL_03-Visual_Assist_X_1_7_1_1' ===
 
 
 
-=== 4. TOOL_04-Dependency_Walker_2_2 ===
+=== '4. TOOL_04-Dependency_Walker_2_2' ===
+
