--- a/wiki/SDKs_TOOLs.wiki
+++ b/wiki/SDKs_TOOLs.wiki
@@ -2,11 +2,11 @@
 
 = Introduction =
 
-  * The SDKs & TOOLs listed below are what this project MAY need. They can be acquired by the "Downloads" section of this project: http://code.google.com/p/academic-crawler/downloads/list.
+ * The SDKs & TOOLs listed below are what this project MAY need. They can be acquired by the "Downloads" section of this project: http://code.google.com/p/academic-crawler/downloads/list.
 
-  * *NOTICE 1:* Some of those downloadable items are binaries which can be put into immediate use after installation, while the others are source codes which may need a compilation first, see other documents to find more details on *HOW TO* compile software from source codes.
+ * *NOTICE 1:* Some of those downloadable items are binaries which can be put into immediate use after installation, while the others are source codes which may need a compilation first, see other documents to find more details on *HOW TO* compile software from source codes.
 
-  * *NOTICE 2:* In the meantime, some downloadable items are opensource projects. Those items can be used freely *UNDER CERTAIN LICENSES*, while the others are commercial products which can only be used *AFTER PURCHASE*.
+ * *NOTICE 2:* In the meantime, some downloadable items are opensource projects. Those items can be used freely *UNDER CERTAIN LICENSES*, while the others are commercial products which can only be used *AFTER PURCHASE*.
 
 
 = Details =
@@ -15,31 +15,31 @@
 
 === [http://code.google.com/p/academic-crawler/downloads/list 1. SDK_01-Qt_4.6.2_src] ===
 
-  * *Qt 4.6.2*( *Open Source Edition* ) is used in this project to build application GUIs.
+ * *Qt 4.6.2*( *Open Source Edition* ) is used in this project to build application GUIs.
 
-  * This document is a package with source codes of Qt 4.6.2.
+ * This document is a package with source codes of Qt 4.6.2.
 
-  * *BEFORE* using this version of Qt SDK you need to *BUILD BINARIES FROM THE SOURCE CODES*.
+ * *BEFORE* using this version of Qt SDK you need to *BUILD BINARIES FROM THE SOURCE CODES*.
 
-  * To know *HOW TO* build Qt 4.6.2 binaries from src and configure it for use in *win32 msvc 2005* projects, please check out instructions on project wiki.
+ * To know *HOW TO* build Qt 4.6.2 binaries from src and configure it for use in *win32 msvc 2005* projects, please check out instructions on project wiki.
 
-  * If you are unwilling to build Qt 4.6.2 from src, turn to "SDK_02-Qt_4.6.2_bin" - Qt 4.6.2 binaries built for *win32 msvc 2005*.
+ * If you are unwilling to build Qt 4.6.2 from src, turn to *"SDK_02-Qt_4.6.2_bin"* - Qt 4.6.2 binaries built for *win32 msvc 2005*.
 
 === [http://code.google.com/p/academic-crawler/downloads/list 2. SDK_02-Qt_4.6.2_bin] ===
 
-  * *Qt 4.6.2*( *Open Source Edition* ) is used in this project to build application GUIs.
+ * *Qt 4.6.2*( *Open Source Edition* ) is used in this project to build application GUIs.
 
-  * This document is a package with binaries of Qt 4.6.2 for win32 msvc2005.
+ * This document is a package with binaries of Qt 4.6.2 for win32 msvc2005.
 
-  * To know *HOW TO* configure it for use in *win32 msvc 2005* projects, please check out instructions on project wiki.
+ * To know *HOW TO* configure it for use in *win32 msvc 2005* projects, please check out instructions on project wiki.
 
-  * If you want to build Qt 4.6.2 from src, turn to "SDK_01-Qt_4.6.2_src" - Qt 4.6.2 source.
+ * If you want to build Qt 4.6.2 from src, turn to *"SDK_01-Qt_4.6.2_src"* - Qt 4.6.2 source.
 
 == TOOLs: ==
 
 === [http://code.google.com/p/academic-crawler/downloads/list 1. TOOL_01-Tortoise_SVN_1_6_12_&_SVN_1_6_15] ===
 
-
+ 
 
 
 === [http://code.google.com/p/academic-crawler/downloads/list 2. TOOL_02-Qt_Visual_Studio_Integration_1_4_3] ===
