Edited wiki page Build_QT_4_6_2_From_Source through web user interface.

--- a/wiki/Build_QT_4_6_2_From_Source.wiki
+++ b/wiki/Build_QT_4_6_2_From_Source.wiki
@@ -41,7 +41,7 @@
 
  * `VirtualBox` 4.0.2 is a *OPEN-SOURCE* software.
 
- * `VirtaulBox` 4.0.2 can be acquired in "Downloads" section ( *NOT READY YET* ).
+ * `VirtaulBox` 4.0.2 can be acquired in [http://code.google.com/p/academic-crawler/downloads/list TOOL_05-VirtualBox_4_0_2].
 
  * Visit [http://www.virtualbox.org] for more details about `VirtualBox`.
 
