--- a/wiki/SDKs_TOOLs.wiki
+++ b/wiki/SDKs_TOOLs.wiki
@@ -2,11 +2,17 @@
 
 = Introduction =
 
- * The SDKs & TOOLs listed below are what this project MAY need. They can be acquired by the "Downloads" section of this project: [http://code.google.com/p/academic-crawler/downloads/list].
+ * The SDKs & TOOLs listed below are what this project MAY need. They can be acquired by the "Downloads" section of this project: 
 
- * *NOTICE 1:* Some of those downloadable items are binaries which can be put into immediate use after installation, while the others are source codes which may need a compilation first, see other documents to find more details on *HOW TO* compile software from source codes.
+[http://code.google.com/p/academic-crawler/downloads/list].
 
- * *NOTICE 2:* In the meantime, some downloadable items are opensource projects. Those items can be used freely *UNDER CERTAIN LICENSES*, while the others are commercial products which can only be used *AFTER PURCHASE*.
+ * *NOTICE 1:* Some of those downloadable items are binaries which can be put into immediate use after installation, while the others are source 
+
+codes which may need a compilation first, see other documents to find more details on *HOW TO* compile software from source codes.
+
+ * *NOTICE 2:* In the meantime, some downloadable items are opensource projects. Those items can be used freely *UNDER CERTAIN LICENSES*, while the 
+
+others are commercial products which can only be used *AFTER PURCHASE*.
 
 
 = Details =
@@ -21,7 +27,9 @@
 
  * *BEFORE* using this version of Qt SDK you need to *BUILD BINARIES FROM THE SOURCE CODES*.
 
- * To know *HOW TO* build Qt 4.6.2 binaries from src and configure it for use in *win32 msvc 2005* projects, please check out instructions on project wiki.
+ * To know *HOW TO* build Qt 4.6.2 binaries from src and configure it for use in *win32 msvc 2005* projects, please check out instructions on 
+
+project wiki.
 
  * If you are unwilling to build Qt 4.6.2 from src, turn to *"SDK_02-Qt_4.6.2_bin"* - Qt 4.6.2 binaries built for *win32 msvc 2005*.
 
@@ -78,3 +86,11 @@
  * Dependency Walker 2.2 is *FREE*.
 
  * Visit [http://www.dependencywalker.com] for more details about Dependency Walker.
+
+=== [http://code.google.com/p/academic-crawler/downloads/list 5. TOOL_05-VirtualBox_4_0_2] ===
+
+ * *VirtualBox 4.0.2* is a virtual machine which is useful for compiling binaries and running tests.
+
+ * VirtualBox 4.0.2 is *OPEN SOURCE*.
+
+ * Visit [http://www.virtualbox.org] for more details about `VirtualBox`.
