--- a/wiki/SDKs_TOOLs.wiki
+++ b/wiki/SDKs_TOOLs.wiki
@@ -13,7 +13,7 @@
 
 == SDKs ==
 
-=== 1. SDK_01-Qt_4.6.2 ===
+== *`1. SDK_01-Qt_4.6.2`* ==
 
  * *Qt 4.6.2*( *OPEN SOURCE EDITION* ) is used in this project to build application GUIs.
 
@@ -24,7 +24,7 @@
 
 == TOOLs: ==
 
-=== 1. TOOL_01-Tortoise_SVN_1.6.12_&_SVN.1.6.15 ===
+== *`1. TOOL_01-Tortoise_SVN_1.6.12_&_SVN_1.6.15`* ==
 
  * *Svn 1.6.15* is used as source control tool.
 
@@ -38,7 +38,7 @@
 
  * Visit [http://tortoisesvn.net] for more details about Tortoise Svn.
 
-=== 2. TOOL_02-Qt_Visual_Studio_Integration`_`1.2.2 ===
+== *`2. TOOL_02-Qt_Visual_Studio_Integration_1.2.2`* ==
 
  * *Qt Visual Studio Integration 1.2.3* is an add-in for Microsoft Visual Studio that helps developing qt applications.
 
@@ -46,7 +46,7 @@
 
  * Visit [http://qt.nokia.com] for more details about qt commercial edition.
 
-=== 3. TOOL_03-Visual_Assist_X_1_7_1_1 ===
+== *`3. TOOL_03-Visual_Assist_X_1.7.1.1`* ==
 
  * *Visual Assist X 1.7.1.1* is an add-in for Microsoft Visual Studio that helps coding.
 
@@ -54,7 +54,7 @@
 
  * Visit [http://www.wholetomato.com] for more details about Visual Assist X.
 
-=== 4. TOOL_04-VirtualBox_4_0_2 ===
+== *`4. TOOL_04-VirtualBox_4.0.2`* ==
 
  * *`VirtualBox 4.0.2`* is a virtual machine which is useful for compiling binaries and running tests.
 
